# webservers_benchmark

./: .gitignore  .gitingore  .pre-commit-config.yaml  README.md  create_latest_file.sh  create_markdown_tables.py  docker-compose.yaml  mysql_db.sql  postgres_db.sql  redis_data_generator.py  requirements.txt  ruff.toml  run_bench.py  test_bench.py
reports/: 2023-01-08.json  2023-01-09.json  2023-01-10.json  2023-01-13.json  2023-01-14.json  2023-01-15 copy.json  2023-01-15.json  2023-01-18 copy.json  2023-01-18.json  2023-01-31.json  2023-11-28.json  2023-11-30.json  2023-12-08.json
tools/: monitor.py
web_servers/go_fasthttp/: config.toml  go.mod  go.sum  main.go
web_servers/go_fasthttp/api/: auth.go  cpu_bound.go  users.go
web_servers/go_fasthttp/api/utils/: utils.go
web_servers/go_fasthttp/storage/: users.go
web_servers/go_fasthttp/storage/mysql/: users.go
web_servers/go_fasthttp/storage/postgres/: users.go
web_servers/go_fasthttp/storage/redis/: users.go
web_servers/go_gin/: config.toml  go.mod  go.sum  main.go
web_servers/go_gin/api/: cpu_bound.go  users.go
web_servers/go_gin/storage/mysql/: users.go
web_servers/java_vertx/: .project  README.adoc  config.toml  pom.xml
web_servers/js_express/: app.js  config.toml  package-lock.json
web_servers/py_aiohttp/: config.toml  requirements.txt
web_servers/py_aiohttp/src/: main.py
web_servers/py_aiohttp/src/db/: base.py  (+1 more)
web_servers/py_django/: config.toml  requirements.txt
web_servers/py_django/bench/: views.py  wsgi.py
web_servers/py_django_async/: config.toml  manage.py  requirements.txt
web_servers/py_django_async/bench/: asgi.py  models.py  settings.py  urls.py  views.py
web_servers/py_fast_api/: RUN.md  config.toml  requirements.txt
web_servers/py_fast_api/src/: dependencies.py  main.py  settings.py
web_servers/py_fast_api_uvicorn/: config.toml  requirements.txt
web_servers/py_fast_api_uvicorn/src/: main.py
web_servers/py_sanic/: config.toml  requirements.txt
web_servers/py_sanic/src/: main.py  settings.py
web_servers/rs_actixweb/: Cargo.toml  config.toml
web_servers/rs_actixweb/src/: common.rs  lib.rs  main.rs  storage.rs
web_servers/rs_actixweb/src/common/: mysql.rs  redis.rs
web_servers/rs_actixweb/src/storage/: postgres.rs
web_servers/rs_actixweb/src/storage/mysql/: user_repo.rs
web_servers/rs_actixweb/src/storage/postgres/: base.rs  user_repo.rs
web_servers/rs_actixweb/src/storage/redis/: user_repo.rs
web_servers/rs_axum/: Cargo.toml  config.toml
web_servers/rs_axum/src/: main.rs  storage.rs  usecases.rs
web_servers/rs_axum/src/common/: mysql.rs
web_servers/rs_axum/src/storage/mysql/: user_repo.rs
web_servers/rs_axum/src/storage/postgres/: user_repo.rs
web_servers/rs_axum/src/usecases/: users.rs
web_servers/rs_axum/src/usecases/users/: errors.rs  get_user.rs  user_updater.rs
web_servers/rs_hyper/: Cargo.toml  config.toml
web_servers/rs_hyper/src/: common.rs  main.rs
web_servers/rs_hyper/src/usecases/: users.rs
web_servers/rs_hyper/src/usecases/users/: entities.rs  errors.rs  user_updater.rs
web_servers/rs_hyper_sync/: Cargo.toml  config.toml
web_servers/rs_hyper_sync/src/: common.rs  main.rs
wrk_scripts/: get_user_by_pk.lua  plain.lua  to_json.lua  update_user.lua
(+27 files in other folders)
