[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# general
log = "0.4"
env_logger = {version = "0.10", default-features = false}
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-trait = "0.1"
# db postgres
deadpool-postgres = { version = "0.10.3"}
tokio-postgres = { version = "^0.7.7", features = ["with-chrono-0_4", "with-time-0_2"]}
sql-builder = {version="3.1.1"}
# db redis
redis = { version = "0.22.2", features = ["tokio-comp", "aio", "connection-manager"]}
# web
actix-web = "4.2"
actix-http = "3.2.2"
actix-rt = "2.7.0"

[features]
db_posgres_client_deadpool = []
db_redis = []

[profile.release]
codegen-units = 1 
lto = true