[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# general
log = "0.4"
env_logger = {version = "0.10", default-features = false}
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_qs = "0.11.0"
async-trait = "0.1"
# db
deadpool-postgres = "0.10.3"
tokio-postgres = { version = "^0.7.7", features = ["with-chrono-0_4", "with-time-0_2"]}
sql-builder = "3.1.1"
# web
axum = "0.6.2"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
url = "2.3.1"
regex = "1.7.0"
lazy_static = "1.4.0"
[profile.release]
codegen-units = 1 
lto = true